better support for comparisons in sql-api filter